--- a/templates/lnm2.html
+++ b/templates/lnm2.html
@@ -1,13 +1,13 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<section class="blog section-top-space " style="margin-bottom: 10%;">
-<br><br>
-<div class="center">
+<section class="blog section-top-space " >
 
-    <h1>LISTADO NACIONAL DE MEDICAMENTOS ESENCIALES (LNME) 2018 - SECRETARÍA DE SALUD </h1>
 
-    </div>
+<center>
+    <h3>LISTADO NACIONAL DE MEDICAMENTOS ESENCIALES (LNME) 2018 - SECRETARÍA DE SALUD </h3>
+</center>
+
 <style>
 table {
   border-collapse: collapse;
@@ -29,7 +29,7 @@ tr:nth-child(even){background-color: #f2f2f2}
 
 
 <section >
-<table id="example" class="display" style="width:100%">
+<table id="example3" class="display" style="width:100%">
         <thead>
             <tr>
                 <th>No</th>
@@ -56,14 +56,7 @@ tr:nth-child(even){background-color: #f2f2f2}
 {%  endfor %}
 
         </tbody>
-        <tfoot>
-            <tr>
-              <th>No</th>
 
-                <th>Categoria</th>
- <th>Ver Medicamentos</th>
-            </tr>
-        </tfoot>
     </table>
 </section>
 
