--- a/templates/lnm_detalle3.html
+++ b/templates/lnm_detalle3.html
@@ -50,7 +50,7 @@
 
  <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.25/css/jquery.dataTables.min.css" />
 <section >
-<table id="example" class="display " style="width:100%">
+<table id="example2" class="display " style="width:100%">
         <thead>
             <tr>
                 <th>No</th>
@@ -68,7 +68,7 @@
         <tbody >
   {% for item in listado_medicamentos %}
             <tr>
-                <td>{{ item.correlativo}}</td>
+                <td>{{ forloop.counter}}</td>
                 <td style="font-family: Verdana;" >{{item.codigo_atc}}</td>
                 <td title="{{ item.categoria }} / {{ item.sub_categoria }}">{{item.nombre_medicamento |safe }}</td>
                 <td>{{item.contentracion}}</td>
