--- a/templates/lnm_detalle.html
+++ b/templates/lnm_detalle.html
@@ -8,7 +8,33 @@
     <h1>LISTADO NACIONAL DE MEDICAMENTOS ESENCIALES (LNME) 2018 - SECRETARÍA DE SALUD </h1>
 
     </div>
-    <section class="content " style="margin-left: 0.5%;margin-right: 0.5%;text-align: justify;"><p style="color: red;">Instrucciones de uso:</p><p>*En la parte izquierda de la tabla de consulta encontrara el botón PDF para generar un archivo de este tipo, en la parte derecha tiene un filtro que realiza búsquedas en todas las columnas encontrando coincidencias con lo que escribe, también se encuentran ubicados filtros en cada columna, puede filtrar en diferentes columnas a la misma vez, así puede realizar cruces de información de acuerdo con sus criterios de búsqueda.</p></section>
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong">
+  Instrucciones
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle">Instrucciones</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/sy1t4chF2Dk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+
+      </div>
+    </div>
+  </div>
+</div>
+
+
 
 <style>
 
