--- a/templates/lnm_detalle3.html
+++ b/templates/lnm_detalle3.html
@@ -27,11 +27,7 @@
         </button>
       </div>
       <div class="modal-body">
-      <p style="color: red;">Instrucciones de uso:</p><p>
-        *En la parte izquierda de la tabla de consulta encontrara el botón PDF para generar un archivo de este tipo,
-        en la parte derecha tiene un filtro que realiza búsquedas en todas las columnas encontrando coincidencias con lo que escribe,
-        también se encuentran ubicados filtros en cada columna, puede filtrar en diferentes columnas a la misma vez,
-        así puede realizar cruces de información de acuerdo con sus criterios de búsqueda.</p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/sy1t4chF2Dk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
