--- a/templates/base.html
+++ b/templates/base.html
@@ -63,8 +63,10 @@
         <span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li><a href="/lnme2">Por Categorías</a></li>
+             <li><a href="/lnme3">Por Establecimiento</a></li>
+              <li><a href="/lnme_original">LNME Medicamentos</a></li>
           <li><a href="/lnme">LNME Completo</a></li>
-          <li><a href="/lnme3">Por Establecimiento</a></li>
+
         </ul>
       </li>
 
